Updated docs website